# BCI

Assignment 1/: assignment_01_jupyter_notebooks.ipynb  assignment_01_mne.ipynb
Assignment 1/.ipynb_checkpoints/: assignment_01_jupyter_notebooks-checkpoint.ipynb
Assignment 1/bci-BKI323_python-env/: pyproject.toml
Assignment 2/: assignment_02_covariance_matrix.ipynb  assignment_02_lda.ipynb
